--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ node_js:
 before_install:
   - npm install -g typescript
 script:
-  - tsc examples/scripts/example.ts
-  - tsc examples/scripts/example0.ts
-  - tsc examples/scripts/example1.ts
-  - tsc examples/scripts/example2.ts
-  - tsc examples/scripts/example3.ts
-  - tsc examples/scripts/example4.ts
-  - tsc examples/scripts/example5.ts
-  - tsc examples/scripts/example6.ts
-  - tsc examples/scripts/example7.ts
-  - tsc examples/scripts/example8.ts
+  - tsc --target ES5 --module amd examples/scripts/example.ts
+  - tsc --target ES5 --module amd examples/scripts/example0.ts
+  - tsc --target ES5 --module amd examples/scripts/example1.ts
+  - tsc --target ES5 --module amd examples/scripts/example2.ts
+  - tsc --target ES5 --module amd examples/scripts/example3.ts
+  - tsc --target ES5 --module amd examples/scripts/example4.ts
+  - tsc --target ES5 --module amd examples/scripts/example5.ts
+  - tsc --target ES5 --module amd examples/scripts/example6.ts
+  - tsc --target ES5 --module amd examples/scripts/example7.ts
+  - tsc --target ES5 --module amd examples/scripts/example8.ts
